[package]
name = "vert-wasm"
description = "Various WASM utilities for VERT.sh"
authors = ["nullptr"]
repository = "https://github.com/VERT-sh/vert-wasm"
license = "AGPL-3.0"
homepage = "https://vert.sh"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
icns = "0.3.1"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
